[package]
name = "leetcode"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "1"
path = "0001_two_sum.rs"

[[bin]]
name = "2"
path = "0002_add_two_numbers.rs"

[[bin]]
name = "3"
path = "0003_longest_substring_without_repeating_characters.rs"

[[bin]]
name = "4"
path = "0004_median_of_two_sorted_arrays.rs"

[[bin]]
name = "5"
path = "0005_longest_palindromic_substring.rs"

[[bin]]
name = "6"
path = "0006_zigzag_conversion.rs"

[[bin]]
name = "7"
path = "0007_reverse_integer.rs"

[[bin]]
name = "8"
path = "0008_string_to_integer.rs"

[[bin]]
name = "9"
path = "0009_palindrome_number.rs"

[[bin]]
name = "10"
path = "0010_regular_expression_matching.rs"

[[bin]]
name = "11"
path = "0011_container_with_most_water.rs"

[[bin]]
name = "12"
path = "0012_integer_to_roman.rs"

[[bin]]
name = "13"
path = "0013_roman_to_integer.rs"

[[bin]]
name = "14"
path = "0014_longest_common_prefix.rs"

[[bin]]
name = "15"
path = "0015_3sum.rs"

[[bin]]
name = "16"
path = "0016_3sum_closest.rs"

[[bin]]
name = "17"
path = "0017_letter_combinations_of_a_phone_number.rs"

[[bin]]
name = "18"
path = "0018_4sum.rs"

[[bin]]
name = "19"
path = "0019_remove_nth_node_from_end_of_list.rs"

[[bin]]
name = "20"
path = "0020_valid_parentheses.rs"

[[bin]]
name = "21"
path = "0021_merge_two_sorted_lists.rs"

[[bin]]
name = "22"
path = "0022_generate_parentheses.rs"

[[bin]]
name = "23"
path = "0023_merge_k_sorted_lists.rs"

[[bin]]
name = "24"
path = "0024_swap_nodes_in_pairs.rs"

[[bin]]
name = "25"
path = "0025_reverse_nodes_in_k_group.rs"

[[bin]]
name = "26"
path = "0026_remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "27"
path = "0027_remove_element.rs"

[[bin]]
name = "28"
path = "0028_find_the_index_of_the_first_occurrence_in_a_string.rs"

[[bin]]
name = "29"
path = "0029_devide_two_integers.rs"

[[bin]]
name = "30"
path = "0030_substring_with_concatenation_of_all_words.rs"

[[bin]]
name = "31"
path = "0031_next_permutation.rs"

[[bin]]
name = "32"
path = "0032_longest_valid_parentheses.rs"

[[bin]]
name = "33"
path = "0033_search_in_rotated_sorted_array.rs"

[[bin]]
name = "34"
path = "0034_find_first_and_last_position_of_element_in_sorted_array.rs"

[[bin]]
name = "35"
path = "0035_search_insert_position.rs"

[[bin]]
name = "36"
path = "0036_valid_sudoku.rs"

[[bin]]
name = "37"
path = "0037_sudoku_solver.rs"

[[bin]]
name = "38"
path = "0038_count_and_say.rs"

[[bin]]
name = "39"
path = "0039_combination_sum.rs"

[[bin]]
name = "40"
path = "0040_combination_sum_ii.rs"

[[bin]]
name = "41"
path = "0041_first_missing_positive.rs"

[[bin]]
name = "42"
path = "0042_trapping_rain_water.rs"

[[bin]]
name = "43"
path = "0043_multiply_strings.rs"

[[bin]]
name = "44"
path = "0044_wildcard_matching.rs"

[[bin]]
name = "45"
path = "0045_jump_game_ii.rs"

[[bin]]
name = "46"
path = "0046_permutations.rs"

[[bin]]
name = "47"
path = "0047_permutations_ii.rs"

[[bin]]
name = "48"
path = "0048_rotate_image.rs"

[[bin]]
name = "49"
path = "0049_group_anagrams.rs"

[[bin]]
name = "50"
path = "0050_pow_x_n.rs"
