[package]
name = "leetcode"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "1"
path = "0001_two_sum.rs"

[[bin]]
name = "2"
path = "0002_add_two_numbers.rs"

[[bin]]
name = "3"
path = "0003_longest_substring_without_repeating_characters.rs"

[[bin]]
name = "4"
path = "0004_median_of_two_sorted_arrays.rs"

[[bin]]
name = "5"
path = "0005_longest_palindromic_substring.rs"

[[bin]]
name = "6"
path = "0006_zigzag_conversion.rs"

[[bin]]
name = "7"
path = "0007_reverse_integer.rs"

[[bin]]
name = "8"
path = "0008_string_to_integer.rs"

[[bin]]
name = "9"
path = "0009_palindrome_number.rs"

[[bin]]
name = "10"
path = "0010_regular_expression_matching.rs"

[[bin]]
name = "11"
path = "0011_container_with_most_water.rs"

[[bin]]
name = "12"
path = "0012_integer_to_roman.rs"

[[bin]]
name = "13"
path = "0013_roman_to_integer.rs"

[[bin]]
name = "14"
path = "0014_longest_common_prefix.rs"

[[bin]]
name = "15"
path = "0015_3sum.rs"

[[bin]]
name = "16"
path = "0016_3sum_closest.rs"

[[bin]]
name = "17"
path = "0017_letter_combinations_of_a_phone_number.rs"

[[bin]]
name = "18"
path = "0018_4sum.rs"

[[bin]]
name = "19"
path = "0019_remove_nth_node_from_end_of_list.rs"

[[bin]]
name = "20"
path = "0020_valid_parentheses.rs"

[[bin]]
name = "21"
path = "0021_merge_two_sorted_lists.rs"

[[bin]]
name = "22"
path = "0022_generate_parentheses.rs"

[[bin]]
name = "23"
path = "0023_merge_k_sorted_lists.rs"

[[bin]]
name = "24"
path = "0024_swap_nodes_in_pairs.rs"

[[bin]]
name = "25"
path = "0025_reverse_nodes_in_k_group.rs"

[[bin]]
name = "26"
path = "0026_remove_duplicates_from_sorted_array.rs"

[[bin]]
name = "27"
path = "0027_remove_element.rs"

[[bin]]
name = "28"
path = "0028_find_the_index_of_the_first_occurrence_in_a_string.rs"

[[bin]]
name = "29"
path = "0029_devide_two_integers.rs"

[[bin]]
name = "30"
path = "0030_substring_with_concatenation_of_all_words.rs"

[[bin]]
name = "31"
path = "0031_next_permutation.rs"

[[bin]]
name = "32"
path = "0032_longest_valid_parentheses.rs"

[[bin]]
name = "33"
path = "0033_search_in_rotated_sorted_array.rs"

[[bin]]
name = "34"
path = "0034_find_first_and_last_position_of_element_in_sorted_array.rs"

[[bin]]
name = "35"
path = "0035_search_insert_position.rs"

[[bin]]
name = "36"
path = "0036_valid_sudoku.rs"

[[bin]]
name = "37"
path = "0037_sudoku_solver.rs"

[[bin]]
name = "38"
path = "0038_count_and_say.rs"

[[bin]]
name = "39"
path = "0039_combination_sum.rs"

[[bin]]
name = "40"
path = "0040_combination_sum_ii.rs"

[[bin]]
name = "41"
path = "0041_first_missing_positive.rs"

[[bin]]
name = "42"
path = "0042_trapping_rain_water.rs"

[[bin]]
name = "43"
path = "0043_multiply_strings.rs"

[[bin]]
name = "44"
path = "0044_wildcard_matching.rs"

[[bin]]
name = "45"
path = "0045_jump_game_ii.rs"

[[bin]]
name = "46"
path = "0046_permutations.rs"

[[bin]]
name = "47"
path = "0047_permutations_ii.rs"

[[bin]]
name = "48"
path = "0048_rotate_image.rs"

[[bin]]
name = "49"
path = "0049_group_anagrams.rs"

[[bin]]
name = "50"
path = "0050_pow_x_n.rs"

[[bin]]
name = "51"
path = "0051_n_queens.rs"

[[bin]]
name = "52"
path = "0052_n_queens_ii.rs"

[[bin]]
name = "53"
path = "0053_maximum_subarray.rs"

[[bin]]
name = "54"
path = "0054_spiral_matrix.rs"

[[bin]]
name = "55"
path = "0055_jump_game.rs"

[[bin]]
name = "56"
path = "0056_merge_intervals.rs"

[[bin]]
name = "57"
path = "0057_insert_interval.rs"

[[bin]]
name = "58"
path = "0058_length_of_last_word.rs"

[[bin]]
name = "59"
path = "0059_spiral_matrix_ii.rs"

[[bin]]
name = "60"
path = "0060_permutation_sequence.rs"

[[bin]]
name = "61"
path = "0061_rotate_list.rs"

[[bin]]
name = "62"
path = "0062_unique_paths.rs"

[[bin]]
name = "63"
path = "0063_unique_paths_ii.rs"

[[bin]]
name = "64"
path = "0064_minimum_path_sum.rs"

[[bin]]
name = "65"
path = "0065_valid_number.rs"

[[bin]]
name = "66"
path = "0066_plus_one.rs"

[[bin]]
name = "67"
path = "0067_add_binary.rs"

[[bin]]
name = "68"
path = "0068_text_justification.rs"

[[bin]]
name = "69"
path = "0069_sqrt_x.rs"

[[bin]]
name = "70"
path = "0070_climbing_stairs.rs"

[[bin]]
name = "71"
path = "0071_simplify_path.rs"

[[bin]]
name = "72"
path = "0072_edit_distance.rs"

[[bin]]
name = "73"
path = "0073_set_matrix_zeroes.rs"

[[bin]]
name = "74"
path = "0074_search_a_2d_matrix.rs"

[[bin]]
name = "75"
path = "0075_sort_colors.rs"

[[bin]]
name = "76"
path = "0076_minimum_window_substring.rs"

[[bin]]
name = "77"
path = "0077_combinations.rs"

[[bin]]
name = "78"
path = "0078_subsets.rs"

[[bin]]
name = "79"
path = "0079_word_search.rs"

[[bin]]
name = "80"
path = "0080_remove_duplicates_from_sorted_array_ii.rs"

[[bin]]
name = "81"
path = "0081_search_in_rotated_sorted_array_ii.rs"

[[bin]]
name = "82"
path = "0082_remove_duplicates_from_sorted_list_ii.rs"

[[bin]]
name = "83"
path = "0083_remove_duplicates_from_sorted_list.rs"

[[bin]]
name = "84"
path = "0084_largest_rectangle_in_histogram.rs"

[[bin]]
name = "85"
path = "0085_maximal_rectangle.rs"

[[bin]]
name = "86"
path = "0086_partition_list.rs"

[[bin]]
name = "87"
path = "0087_scramble_string.rs"

[[bin]]
name = "88"
path = "0088_merge_sorted_array.rs"

[[bin]]
name = "89"
path = "0089_gray_code.rs"

[[bin]]
name = "90"
path = "0090_subsets_ii.rs"
